# GhostEscape

./: .gitignore  CMakeLists.txt  GhostEscape-Linux
src/: enemy.cpp  enemy.h  player.cpp  player.h  scene_main.cpp  scene_main.h
src/core/: actor.cpp  actor.h  defs.h  game.cpp  game.h  object.cpp  object.h  object_affiliate.cpp  object_affiliate.h  object_screen.h  object_world.h  scene.cpp  scene.h
src/core/affiliate/: coilder.cpp  coilder.h  sprite.cpp  sprite.h  sprite_anim.cpp  sprite_anim.h
